# glaFinalProject

./: .gitignore  CMakeLists.txt
include/: common.hpp  tokenizer.hpp
src/: main.cpp  tokenizer.cpp
tests/: test.tal
yaku/: CMakeLists.txt
yaku/include/uxntal/: definitions.hpp  encoder.cpp  parser.cpp  parser.hpp  tokens.cpp  tokens.hpp
yaku/src/: main.cpp
yaku/test/: hello.tal
